--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/sinon": "^9.0.11",
     "@types/sinon-chai": "^3.2.5",
     "axios": "^0.21.1",
-    "chai": "^4.3.3",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.21.0",
     "gulp": "^4.0.2",
@@ -45,7 +45,7 @@
   },
   "main": "main.js",
   "scripts": {
-    "test": "node test/all.js",
+    "test": "mocha",
     "check": "tsc --noEmit -p tsconfig.check.json",
     "lint": "eslint"
   },
