--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -39,7 +39,7 @@ jobs:
             - name: Lint source code
               run: npm run lint
             - name: Test package files
-              run: npm run test:package
+              run: npm run test
 
     # Runs adapter tests on all supported node versions and OSes
     adapter-tests:
@@ -76,7 +76,7 @@ jobs:
               if: startsWith(runner.OS, 'windows')
               run: set DEBUG=testing:* & npm run test:integration
 
-# TODO: To enable automatic npm releases, create a token on npmjs.org 
+# TODO: To enable automatic npm releases, create a token on npmjs.org
 # Enter this token as a GitHub secret (with name NPM_TOKEN) in the repository options
 # Then uncomment the following block:
 
