--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.4.0",
+    "serialport": "^9.0.1",
     "shelljs": "^0.8.4",
     "usb": "^1.6.5"
   },
